<resources>
    <string name="app_name">Weather</string>
    <string name="san_francisco"> </string>
    <string name="_20">26</string>
    <string name="c">°C</string>
    <string name="_5_km_h">5 km/h</string>
    <string name="_1000_pa">1000 hPa</string>
    <string name="_70">70 %</string>
    <string name="_10_km">10 km</string>
    <string name="today">Today</string>
    <string name="_10_am">10 AM</string>
    <string name="_19">29° | 30°</string>
    <string name="_21">25°</string>
    <string name="cloudy">Cloudy</string>
    <string name="saturday">Saturday</string>
    <string name="wednesday">Wednesday</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="search_city">Search city....</string>

    <!--    Login/Register/Verify UI    -->
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_background">login background</string>
    <string name="mms_weather">MMS Weather</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="verification">Verification</string>
    <string name="verify_code">Verify Code</string>
    <string name="we_have_sent_a_verification_code_on_your_mobile_number_please_verify_it_first">We have sent a verification code on your mobile number. Please verify it first.</string>
</resources>