<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:orientation="vertical"
    style="@style/loginParent">

    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12"
                tools:ignore="DisableBaselineAlignment">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3"
                    tools:ignore="InefficientWeight">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="@string/login_background"
                        tools:ignore="ImageContrastCheck" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">


                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/mms_weather"
                    tools:ignore="TextContrastCheck" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:id="@+id/layout_register"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    style="@style/loginCard"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor">

                    <LinearLayout
                        style="@style/linearParent"

                        android:layout_height="439dp"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin"
                        tools:ignore="TextSizeCheck">

                        <TextView
                            style="@style/headerTextPrimary"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:text="@string/register"
                            tools:ignore="TextContrastCheck" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/editTextName"
                                style="@style/modifiedEditText"
                                android:hint="@string/name"
                                android:inputType="text"
                                android:maxLines="1"
                                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/editTextMobile"
                                style="@style/modifiedEditText"
                                android:hint="@string/mobile_number"
                                android:inputType="text"
                                android:maxLines="1"
                                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/editTextEmail"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_email_hint"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/editTextPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/buttonRegister"
                            style="@style/loginButton"
                            android:layout_gravity="center"
                            android:text="@string/register"
                            tools:ignore="DuplicateSpeakableTextCheck" />

                        <TextView
                            android:id="@+id/buttonGoToLogin"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:text="@string/signup_login_hint"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>